--- a/css/registro.css
+++ b/css/registro.css
@@ -1,7 +1,8 @@
 body{
   background-image: url(../assets/fondo.jpg);
-  background-size: cover;
+  height: 100%;
   background-repeat: no-repeat;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .logo{
